--- a/app/src/main/res/drawable/bg_edit_text.xml
+++ b/app/src/main/res/drawable/bg_edit_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="@dimen/floating_hint_margin">
-        <bitmap android:src="@drawable/underline"></bitmap>
+        <bitmap android:src="@drawable/underline" />
     </item>
 </layer-list>
